2020-03-05 17:28 +0000  Asterisk Development Team <asteriskteam@digium.com>

	* asterisk 13.32.0-rc1 Released.

2020-03-05 11:20 +0000 [077cc24d66]  Asterisk Development Team <asteriskteam@digium.com>

	* Update CHANGES and UPGRADE.txt for 13.32.0
2020-03-03 10:57 +0000 [4b242d4280]  lvl <digium@lvlconsultancy.nl>

	* res_pjsip_refer: ensure refer progress is still sent after Proceeding()

	  ASTERISK-28766 #close

	  Change-Id: I5ce2210062f9325db762edbf6e46075079bb2cd1

2020-01-12 05:37 +0000 [d6b5a18111]  Sebastian Kemper <sebastian_ml@gmx.net>

	* check_expr2: fix cross-compile/hardening issues

	  When building check_expr2 with ASLR PIE hardening enabled the linker
	  fails. This is resolved by adding the regular compiler flags when
	  building the object files from ast_expr2f.c and ast_expr2.c.

	  Note: The STANDALONE define is removed because it is already defined in
	  _ASTCFLAGS. YY_NO_INPUT is defined so that the compile survives
	  '--enable-dev-mode'.

	  Also, a Makefile variable "CROSS_COMPILING" is added so that the
	  build system doesn't try to run check_expr2 when cross-compiling,
	  because that will fail the build as will.

	  ASTERISK-28685 #close

	  Signed-off-by: Sebastian Kemper <sebastian_ml@gmx.net>
	  Change-Id: If435b7db9f9ad8266245bda51c81c220f9658915

2020-02-28 12:53 +0000 [0fb06121cb]  Kevin Harwell <kharwell@digium.com>

	* message & stasis/messaging: make text message variables work in ARI

	  When a text message was received any associated variable was not written to
	  the ARI TextMessageReceived event. This occurred because Asterisk only wrote
	  out "send" variables. However, even those "send" variables would fail ARI
	  validation due to a TextMessageVariable formatting bug.

	  Since it seems the TextMessageReceived event has never been able to include
	  actual variables it was decided to remove the TextMessageVariable object type
	  from ARI, and simply return a JSON object of key/value pairs for variables.