@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-13.32.0-rc1</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-13.32.0-rc1</h3><h3 align="center">Date: 2020-03-05</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-13.32.0</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-13.32.0</h3><h3 align="center">Date: 2020-03-12</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
 <li><a href="#summary">Summary</a></li>
 <li><a href="#contributors">Contributors</a></li>
 <li><a href="#closed_issues">Closed Issues</a></li>
@@ -6,7 +6,7 @@
 <li><a href="#diffstat">Diffstat</a></li>
 </ol><hr><a name="summary"><h2 align="center">Summary</h2></a><center><a href="#top">[Back to Top]</a></center><p>This release is a point release of an existing major version. The changes included were made to address problems that have been identified in this release series, or are minor, backwards compatible new features or improvements. Users should be able to safely upgrade to this version if this release series is already in use. Users considering upgrading from a previous version are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p><p>The data in this summary reflects changes that have been made since the previous release, asterisk-13.31.0.</p><hr><a name="contributors"><h2 align="center">Contributors</h2></a><center><a href="#top">[Back to Top]</a></center><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release. For coders, the number is how many of their patches (of any size) were committed into this release. For testers, the number is the number of times their name was listed as assisting with testing a patch. Finally, for reporters, the number is the number of issues that they reported that were affected by commits that went into this release.</p><table width="100%" border="0">
 <tr><th width="33%">Coders</th><th width="33%">Testers</th><th width="33%">Reporters</th></tr>
-<tr valign="top"><td width="33%">10 Sean Bright <sean.bright@gmail.com><br/>5 Walter Doekes <walter+asterisk@wjd.nu><br/>4 Kevin Harwell <kharwell@digium.com><br/>2 Torrey Searle <torrey@voxbone.com><br/>2 Joshua C. Colp <jcolp@sangoma.com><br/>1 Asterisk Development Team <asteriskteam@digium.com><br/>1 Sebastian Kemper <sebastian_ml@gmx.net><br/>1 George Joseph <gjoseph@digium.com><br/>1 Sylvain Afchain <safchain@gmail.com><br/>1 Jaco Kroon <jaco@uls.co.za><br/>1 Ben Ford <bford@digium.com><br/>1 lvl <digium@lvlconsultancy.nl><br/></td><td width="33%"><td width="33%">4 Ross Beer <ross.beer@voicehost.co.uk><br/>2 Walter Doekes <walter+asterisk@wjd.nu><br/>1 Paul Brooks<br/>1 Martin Zeh<br/>1 Dmitriy Serov<br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Benjamin Keith Ford <bford@digium.com><br/>1 Sylvain Afchain <safchain@wazo.io><br/>1 EDV O-TON <edv@o-ton-online.de><br/>1 Martin Zeh <martin.zeh@forsa.de><br/>1 alex <warp@adygtelecom.com><br/>1 Ross Beer<br/>1 Timothy Vanderaerden <timothy.vanderaerden@optimise-group.be><br/>1 xrobau <xrobau@gmail.com><br/>1 Sebastian Kemper <sebastian_ml@gmx.net><br/>1 Paul Brooks <paul@dialaround.pro><br/>1 Peter Sokolov <newsletter@fab-online.com><br/>1 Francois Blackburn <fblackburn@wazo.io><br/>1 Peter Sokolov<br/>1 EDV O-TON<br/>1 Dmitriy Serov <serov.d.p@gmail.com><br/>1 Alex <alex@alex-at.ru><br/>1 Torrey Searle <tsearle@gmail.com><br/>1 lvl <digium@lvlconsultancy.nl><br/></td></tr>
+<tr valign="top"><td width="33%">10 Sean Bright <sean.bright@gmail.com><br/>5 Walter Doekes <walter+asterisk@wjd.nu><br/>4 Kevin Harwell <kharwell@digium.com><br/>2 Torrey Searle <torrey@voxbone.com><br/>2 Asterisk Development Team <asteriskteam@digium.com><br/>2 Joshua C. Colp <jcolp@sangoma.com><br/>1 Sebastian Kemper <sebastian_ml@gmx.net><br/>1 George Joseph <gjoseph@digium.com><br/>1 Sylvain Afchain <safchain@gmail.com><br/>1 Jaco Kroon <jaco@uls.co.za><br/>1 Ben Ford <bford@digium.com><br/>1 lvl <digium@lvlconsultancy.nl><br/></td><td width="33%"><td width="33%">4 Ross Beer <ross.beer@voicehost.co.uk><br/>2 Walter Doekes <walter+asterisk@wjd.nu><br/>1 Paul Brooks<br/>1 Martin Zeh<br/>1 Dmitriy Serov<br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Benjamin Keith Ford <bford@digium.com><br/>1 Sylvain Afchain <safchain@wazo.io><br/>1 EDV O-TON <edv@o-ton-online.de><br/>1 Martin Zeh <martin.zeh@forsa.de><br/>1 alex <warp@adygtelecom.com><br/>1 Ross Beer<br/>1 Timothy Vanderaerden <timothy.vanderaerden@optimise-group.be><br/>1 xrobau <xrobau@gmail.com><br/>1 Sebastian Kemper <sebastian_ml@gmx.net><br/>1 Paul Brooks <paul@dialaround.pro><br/>1 Peter Sokolov <newsletter@fab-online.com><br/>1 Francois Blackburn <fblackburn@wazo.io><br/>1 Peter Sokolov<br/>1 EDV O-TON<br/>1 Dmitriy Serov <serov.d.p@gmail.com><br/>1 Alex <alex@alex-at.ru><br/>1 Torrey Searle <tsearle@gmail.com><br/>1 lvl <digium@lvlconsultancy.nl><br/></td></tr>
 </table><hr><a name="closed_issues"><h2 align="center">Closed Issues</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p><h3>Bug</h3><h4>Category: Channels/chan_pjsip</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-28766">ASTERISK-28766</a>: PJSIP blind transfer not completed after using Proceeding()<br/>Reported by: lvl<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=4b242d428051fa6e91230279caf6e10f3176c716">[4b242d4280]</a> lvl -- res_pjsip_refer: ensure refer progress is still sent after Proceeding()</li>
 </ul><a href="https://issues.asterisk.org/jira/browse/ASTERISK-28755">ASTERISK-28755</a>: SIP/Stasis: SIP headers not transmitted in the "variables" field<br/>Reported by: Jean Aunis - Prescom<ul>
@@ -55,6 +55,7 @@
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=0246bca5817a808316483ce399976a024b9cdcfb">[0246bca581]</a> Sean Bright -- app_mixmonitor: Set MIXMONITOR_FILENAME to correct value when wav49 is used</li>
 </ul><br><hr><a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all changes that went into this release that did not reference a JIRA issue.</p><table width="100%" border="1">
 <tr><th>Revision</th><th>Author</th><th>Summary</th></tr>
+<tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=887d29213cbdb54e0d6b55dbf5d12b064466df00">887d29213c</a></td><td>Asterisk Development Team</td><td>Update for 13.32.0-rc1</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=077cc24d6610425aeb12bbe1fb2fdffb1c345088">077cc24d66</a></td><td>Asterisk Development Team</td><td>Update CHANGES and UPGRADE.txt for 13.32.0</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=c3e9d37ce78960729b91968dfeb6df4fb1c3a0b9">c3e9d37ce7</a></td><td>Walter Doekes</td><td>say: Remove unused "plural" option from main/say</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=6995b0a8fa472d40c4d9a5704ce2a626684d6b85">6995b0a8fa</a></td><td>Walter Doekes</td><td>app_queue: Refactor odd placement of if's around say_position</td></tr>
@@ -64,21 +65,22 @@
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=ea1f318534ffc322d125ee662c61b1ec73262431">ea1f318534</a></td><td>Sean Bright</td><td>func_odbc: Prevent snprintf() truncation warning</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=74d0244dc3b25a11dbcdcaa25ccc9036027485c3">74d0244dc3</a></td><td>George Joseph</td><td>doc: Fix CHANGES entries to have .txt suffix and update READMEs</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=cea6cad34383448e71cc42c33b466509bc9d0896">cea6cad343</a></td><td>Walter Doekes</td><td>chan_sip: Clarify in sample docs how directmediapermit/-acl should be used</td></tr>
-</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>.lastclean                                                                         |    1
-.version                                                                           |    1
-ChangeLog                                                                          |68939 ----------
-asterisk-13.31.0-summary.html                                                      |  188
-asterisk-13.31.0-summary.txt                                                       |  578
+</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>asterisk-13.31.0-summary.html                                                      |  188 ---
+asterisk-13.31.0-summary.txt                                                       |  578 ----------
+b/.version                                                                         |    2
 b/CHANGES                                                                          |   25
+b/ChangeLog                                                                        |  418 ++++++-
 b/UPGRADE.txt                                                                      |   56
 b/addons/res_config_mysql.c                                                        |   16
 b/apps/app_mixmonitor.c                                                            |   29
-b/apps/app_queue.c                                                                 |   60
+b/apps/app_queue.c                                                                 |   60 -
+b/asterisk-13.32.0-rc1-summary.html                                                |  127 ++
+b/asterisk-13.32.0-rc1-summary.txt                                                 |  362 ++++++
 b/channels/chan_pjsip.c                                                            |    3
-b/channels/chan_sip.c                                                              |  126
+b/channels/chan_sip.c                                                              |  126 +-
 b/channels/sip/include/sip.h                                                       |    1
 b/configs/samples/sip.conf.sample                                                  |    4
-b/configure                                                                        |  141
+b/configure                                                                        |  141 +-
 b/configure.ac                                                                     |   22
 b/contrib/scripts/ast_tls_cert                                                     |    8
 b/contrib/scripts/install_prereq                                                   |    2
@@ -99,7 +101,7 @@ b/main/sorcery.c                                                                
 b/main/tcptls.c                                                                    |   26
 b/makeopts.in                                                                      |    2
 b/menuselect/configure                                                             |   22
-b/res/ari/ari_model_validators.c                                                   |   59
+b/res/ari/ari_model_validators.c                                                   |   59 -
 b/res/ari/ari_model_validators.h                                                   |   23
 b/res/res_config_odbc.c                                                            |    2
 b/res/res_musiconhold.c                                                            |    4
@@ -115,13 +117,8 @@ b/res/stasis/messaging.c                                                        
 b/rest-api/api-docs/endpoints.json                                                 |   20
 b/rest-api/resources.json                                                          |    2
 b/third-party/pjproject/configure.m4                                               |    1
-b/third-party/pjproject/patches/0040-ICE-Add-callback-for-finding-valid-pair.patch |   84
-b/third-party/pjproject/patches/0040-brackets-in-via-received-params.patch         |    6
-contrib/realtime/mysql/mysql_cdr.sql                                               |   33
-contrib/realtime/mysql/mysql_config.sql                                            | 1189
-contrib/realtime/mysql/mysql_voicemail.sql                                         |   35
-contrib/realtime/postgresql/postgresql_cdr.sql                                     |   37
-contrib/realtime/postgresql/postgresql_config.sql                                  | 1287
-contrib/realtime/postgresql/postgresql_voicemail.sql                               |   39
+b/third-party/pjproject/patches/0040-ICE-Add-callback-for-finding-valid-pair.patch |   84 +
+b/third-party/pjproject/patches/0040-brackets-in-via-received-params.patch         |   40
+b/utils/Makefile                                                                   |    4
 doc/CHANGES-staging/res_fax_negotiate_both                                         |    7
-60 files changed, 787 insertions(+), 72651 deletions(-)</pre><br></html>
+56 files changed, 1704 insertions(+), 1120 deletions(-)</pre><br></html>
