@@ -1,3 +1,7 @@
+2020-03-12 14:37 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 13.32.0 Released.
+
 2020-03-05 17:28 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 13.32.0-rc1 Released.
